--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Vite + Vue + TS</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <!-- 该组件App.vue有模板或定义了渲染函数，它将替换容器内所有现存的 DOM 节点 -->
+      <button>按钮</button>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
